--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=demo
+spring.datasource.url=jdbc:mysql://localhost:3306/studentdb?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=12345
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+
